# sdk-nrf

./: west.yml
applications/nrf5340_audio/: CMakeLists.txt  overlay-dfu.conf  overlay-dfu_external_flash.conf  overlay-dfu_external_flash.overlay  overlay-mcuboot.conf  overlay-mcuboot_external_flash.conf  overlay-mcuboot_sdcard.conf  overlay-mcuboot_sdcard.overlay  prj.conf
applications/nrf5340_audio/shifted_bin/: ble5-ctr-rpmsg.hex  ble5-ctr-rpmsg_shifted_3247.hex  ble5-ctr-rpmsg_shifted_3251.hex  ble5-ctr-rpmsg_shifted_min_3247.hex  ble5-ctr-rpmsg_shifted_min_3251.hex  revision.txt
applications/nrf5340_audio/src/: main.c
applications/nrf5340_audio/src/bluetooth/: CMakeLists.txt  Kconfig.defaults  le_audio_cis_headset.c  le_audio_fmna.c
applications/nrf5340_audio/tools/buildprog/: buildprog.py  fw_info_data.py  manually_sign.sh  manually_sign_hardcoded.sh
applications/nrf_desktop/: CMakeLists.txt
applications/nrf_desktop/configuration/common/: gzp_config_legacy_dongle.h
applications/nrf_desktop/configuration/nrf52840dk_nrf52840/: app.overlay  ble_scan_def.h  prj_dongle_profiler.conf  prj_shell_simulate_motion.conf
applications/nrf_desktop/configuration/nrf52840dongle_nrf52840/: ble_scan_def.h
applications/nrf_desktop/configuration/nrf52840gmouse_nrf52840/: prj_release.conf  prj_release_profiler.conf
applications/nrf_desktop/configuration/nrf54l15dk_nrf54l15_cpuapp/: app.overlay  click_detector_def.h  prj_gazell.conf  prj_gazell_ble.conf  prj_gazell_ble_kb.conf  prj_gazell_kb.conf  selector_hw_def.h
applications/nrf_desktop/configuration/nrf54l15pdk_nrf54l15_cpuapp/: prj_gazell.conf  prj_gazell_ble.conf  prj_gazell_ble_kb.conf  prj_gazell_kb.conf
applications/nrf_desktop/src/: main.c
applications/nrf_desktop/src/events/: CMakeLists.txt  Kconfig  crc_event.c  crc_event.h
applications/nrf_desktop/src/hw_interface/: motion_sensor.c
applications/nrf_desktop/src/modules/: CMakeLists.txt  Kconfig  Kconfig.ble_gzp_selector  Kconfig.gzp  bas.c  ble_gzp_selector.c  ble_qos.c  dfu.c  gzp.c  hid_forward.c  usb_state.c
applications/serial_lte_modem/: CMakeLists.txt  Kconfig  README.rst  nrf9160_ecmns_dfu.overlay  nrf9160dk_nrf9160ns.overlay  nrf9160dk_nrf9160ns_dfu.overlay  ota_external_flash.conf  ota_external_flash.overlay  overlay-native_tls.conf  prj.conf
applications/serial_lte_modem/boards/: nrf9160dk_nrf9160_ns.overlay
applications/serial_lte_modem/child_image/: mcuboot.conf  mcuboot.overlay
applications/serial_lte_modem/doc/: FTP_AT_commands.rst  IPV6_changelog.rst  IPV6_changelog.txt  MQTT_AT_commands.rst  TCPIP_AT_commands.rst  slm_description.rst
applications/serial_lte_modem/src/: main.c  slm_at_cmng.c  slm_at_commands.c  slm_at_fota.c  slm_at_host.c  slm_at_host.h  slm_at_icmp.c  slm_at_sms.c  slm_at_tcp_proxy.c  slm_at_tcpip.c  slm_at_udp_proxy.c  slm_native_tls.c  slm_native_tls.h  slm_native_tls_ps.c  slm_native_tls_ps.h  slm_settings.c  slm_util.c  slm_util.h
applications/serial_lte_modem/src/ftp_c/: slm_at_ftp.c
applications/serial_lte_modem/src/gpio/: Kconfig  slm_at_gpio.c  slm_at_gpio.h
applications/serial_lte_modem/src/gps/: slm_at_gps.c
applications/serial_lte_modem/src/http_c/: slm_at_httpc.c
applications/serial_lte_modem/src/hw_rev/: CMakeLists.txt  Kconfig  slm_at_hw_rev.c  slm_at_hw_rev.h
applications/serial_lte_modem/src/mqtt_c/: slm_at_mqtt.c
applications/serial_lte_modem/src/twi/: slm_at_twi.c
applications/serial_lte_modem/src/ui/: CMakeLists.txt  Kconfig  slm_diag.c  slm_diag.h  slm_stats.c  slm_stats.h  slm_ui.c  slm_ui.h
applications/serial_lte_modem/src/user_config/: CMakeLists.txt  Kconfig  slm_at_uc.c  slm_at_uc.h
boards/arm/nrf5340_audio_dk_nrf5340/: nrf5340_audio_dk_nrf5340_cpuapp_common.dts  nrf5340_audio_dk_nrf5340_cpuapp_defconfig  nrf5340_audio_dk_nrf5340_cpuapp_partition_conf.dts  nrf5340_audio_dk_nrf5340_cpunet_defconfig
doc/nrf/: ug_thingy53.rst
include/: gzll_glue.h
lib/agps/: agps.c
lib/nrf_modem_lib/: nrf91_sockets.c
modules/mcuboot/boot/zephyr/: Kconfig
modules/tfm/tfm/boards/board/: RTE_Device.h
modules/tfm/tfm/boards/partition/: flash_layout.h  region_defs.h
samples/app_event_manager_profiler_tracer/: prj.conf
samples/app_event_manager_profiler_tracer/src/modules/: module_a.c
samples/bluetooth/peripheral_uart/: 5340dk.sh  5340dk_create_v1.sh  audio_sdcard_minimal_v1.sh  audio_sdcard_minimal_v2.sh  audio_sdcard_v1.sh  audio_sdcard_v2.sh  mcuboot.conf  prj.conf  prj_dfu.conf  readme.txt
samples/bluetooth/peripheral_uart/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
samples/bluetooth/peripheral_uart/child_image/hci_rpmsg/boards/: nrf5340dk_nrf5340_cpunet.conf
samples/bluetooth/peripheral_uart/child_image/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp.conf
samples/bluetooth/peripheral_uart/src/: main.c
samples/gazell/: 54l.bat
samples/gazell/gzp_dynamic_pairing_device/: prj.conf
samples/gazell/gzp_dynamic_pairing_device/src/: main.c
samples/tfm/sp_example/: CMakeLists.txt  prj.conf  sample.yaml
samples/tfm/sp_example/src/: main.c
samples/tfm/sp_example_out_of_tree/: CMakeLists.txt  prj.conf  sample.yaml
samples/tfm/sp_example_out_of_tree/EXAMPLE/: CMakeLists.txt  EXAMPLE.c  tfm_example.yaml  tfm_manifest_list.yaml.in
samples/tfm/sp_example_out_of_tree/ns_api/: tfm_example_api.c  tfm_example_api.h
samples/tfm/sp_example_out_of_tree/src/: main.c
scripts/nrf_profiler/: stats_nordic.py
subsys/bluetooth/controller/: Kconfig  ecdh.c  hci_driver.c
subsys/caf/events/: Kconfig
subsys/caf/modules/: Kconfig.ble_adv  Kconfig.ble_state  ble_adv.c  ble_state.c  power_manager.c
subsys/gazell/: Kconfig  gzll_glue.c  gzp.c
subsys/net/lib/fota_download/src/: fota_download.c
subsys/net/lib/ftp_client/src/: ftp_client.c
subsys/nrf_profiler/: profiler_nordic.c
subsys/partition_manager/: CMakeLists.txt  Kconfig  pm.yml.placeholder
subsys/pcd/src/: pcd.c
